# eng-roulette

./: .env  .env.example  .env.tmp  Cargo.toml  Makefile  README.md  compose.yaml  docker-compose.yaml  index.html  tunnel.sh
.github/workflows/: ci.yml
account/: Cargo.toml  init.sql
account/src/: lib.rs  main.rs
account/src/api/: app.rs  goauth2.rs  mod.rs  routes.rs
account/src/application/: account.rs
account/src/domain/: model.rs  models.rs  repository.rs  service.rs
account/src/infra/: auth.rs  db.rs  mod.rs  repository.rs  routes.rs  service.rs  state.rs
account/src/infra/auth/: g_oauth.rs  jwt.rs  mod.rs
account/src/infra/repository/: user.rs
account/src/service/: account.rs  mod.rs  test.rs  tests.rs
account/src/test/: test.rs
account/tests/: register.rs
billing/: Cargo.toml  README.md  init.sql
billing/src/: lab.rs  main.rs
billing/src/application/: commands.rs
billing/src/domain/: mod.rs  models.rs  repository.rs
billing/src/infra/: db.rs  mod.rs  repository.rs
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/app/: app.scss  entry.client.tsx  root.tsx  routes.ts
frontend/app/component/: JoinRoom.tsx  Login.tsx  VideoSrc.tsx  login.tsx
frontend/app/context/: session.ts  session.tsx
frontend/app/routes/: GoogleAuthCallback.tsx  Home.tsx  Login.tsx  Register.tsx  home.tsx  login.tsx  register.tsx
frontend/app/service/: account.ts  config.ts  emitter.ts  room.ts  webrtc.ts  ws.ts
frontend/src/: App.css  App.tsx
frontend/src/component/: JoinRoom.tsx  Login.tsx
frontend/src/context/: session.tsx
frontend/src/routes/: GoogleAuthCallback.tsx  Home.tsx  Login.tsx  Register.tsx
frontend/src/service/: account.ts  config.ts  room.ts
labs/: Cargo.toml
labs/src/: experiments.rs  fns.rs  future.rs  main.rs  main1.rs  main2.rs  pin.rs  ref_cell.rs  unsafee.rs
migrations/2024-01-03-130805_rooms/: up.sql
order/: Cargo.toml
order/src/: main.rs
order/src/domain/: models.rs  repository.rs
order/src/infra/: repository.rs  routes.rs  state.rs
room/: Cargo.toml
room/proto/: helloworld.proto
room/src/: box.rs  cli.rs  lab.rs  main.rs  server.rs  tetris.rs  webrtc.rs
room/src/domain/: mod.rs  models.rs  repository.rs
room/src/extract/: jwt.rs  mod.rs
room/src/infra/: repository.rs
room/src/webrtc/: axum.rs  extract.rs  mod.rs  sfu.rs  types.rs
room/src/webrtc/extract/: jwt.rs
scripts/: .env.example  .gitignore  Caddyfile  compose.yaml  http.yml  traefik.yml  tunnel.sh
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
src/domain/: repository.rs
src/infra/: repository.rs
