[package]
name = "eng-roulette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
dotenvy = "0.15"
uuid = "*"
time = "*"
async-trait = "0.1.77"


