[package]
name = "account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
serde = "1.0.194"
dotenvy = "0.15"
uuid = { version = "1.6.1", features = ["v6", "rng", "serde"] }
time = "0.3.31"
chrono = { version = "0.4.31", features = ["clock", "serde"] }
async-trait = "0.1.77"
ahash = "0.8.7"
serde_json = "1.0.110"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }

