[package]
name = "account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7.1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
serde = { version = "1.0.194", features = ["derive"] }
dotenvy = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4.31", features = ["clock", "serde"] }
async-trait = "0.1.82"
serde_json = "1.0.110"
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.97"
thiserror = "1.0.69"
env_logger = { version = "0.11.7", features = ["unstable-kv", "auto-color"] }
log = "0.4.22"
reqwest = "0.11.20"
oauth2 = "5.0.0"

[dev-dependencies]
mockall = "0.13.1"
