[package]
name = "order"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
dotenvy = "0.15"
uuid = "1.6.1"
time = "0.3.31"
async-trait = "0.1.77"
ahash = "0.8.7"