[package]
name = "room"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
futures = { version = "0.3", default-features = false }
tokio = { version = "1.0", features = ["full"] }
http = "1.1.0"
serde = { version = "1.0.213", features = ["derive"] }
tracing-subscriber = "0.3.18"
axum = "0.7.7"
serde_json = "1.0.110"
tower = "0.5.1"
in-keys = "=0.1.1"
rand = "0.9.0-beta.1"

[build-dependencies]
tonic-build = "0.11"