[package]
name = "room"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
futures = { version = "0.3", default-features = false }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
http = "1.1.0"
serde = { version = "1.0.213", features = ["derive"] }
tracing-subscriber = "0.3.18"
axum = { version = "0.8.1", features = ["ws"] }
serde_json = "1.0.110"
tower = "0.5.1"
webrtc = "0.12.0"
anyhow = "1.0.95"
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1.5.0"
base64 = "0.22.1"
headers = "0.4.0"
tower-http = { version = "0.6.2", features = ["cors"] }
rand = "0.8.5"
thiserror = "1.0.69"
env_logger = "0.11.7"
log = "0.4.22"

[build-dependencies]
tonic-build = "0.11"