[package]
name = "room"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
futures = { version = "0.3", default-features = false }
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
http = "1.1.0"
serde = { version = "1.0.213", features = ["derive"] }
axum = { version = "0.8.3", features = ["ws"] }
serde_json = "1.0.110"
webrtc = "0.12.0"
anyhow = "1.0.95"
tower-http = { version = "0.6.2", features = ["cors"] }
jsonwebtoken = "9"
thiserror = "2.0.12"
env_logger = { version = "0.11.7", features = ["unstable-kv", "auto-color"] }
log = { version = "0.4.22", features = ["kv", "kv_std"] }
serde_urlencoded = "0.7.1"